--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ strong {
     textarea {
         width: 250px !important;
     }
-    label {
+    table {
         margin-left: 10px !important;
         margin-right: 10px !important;
     }
