--- a/Kilecy-main/style_about.css
+++ b/Kilecy-main/style_about.css
@@ -1,15 +1,10 @@
 body {
     font-family: 'Open Sans', sans-serif;
-    background-color: #3498db;
+    background-color: #1a4968;
     -moz-transition: background-color 0.4s ease;
     -o-transition: background-color 0.4s ease;
     -webkit-transition: background-color 0.4s ease;
     transition: background-color 0.4s ease;
-}
-
-body.home {
-    background: rgb(34, 193, 195);
-    background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(0, 120, 56, 1) 100%);
 }
 
 body.solution {
